Import of JJNAPIORK/DBIx-Class-Migration-0.003 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.003
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.003.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.002
+version = 0.003
 
 [@Basic]
 [Prereqs]
@@ -25,6 +25,7 @@ File::Temp = 0
 File::ShareDir::ProjectDistDir = 0
 MooseX::Attribute::ENV = 0
 Devel::PartialDump = 0
+DBD::Sqlite = 0
 
 [Prereqs / TestRequires]
 Test::Most = 0
