--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ meta-spec:
 name: DBIx-Class-Migration
 requires:
   Class::Load: 0
+  DBD::Sqlite: 0
   DBIx::Class::DeploymentHandler: 0.001008
   DBIx::Class::Fixtures: 1.001014
   DBIx::Class::Schema::Loader: 0.07017
@@ -33,4 +34,4 @@ requires:
   MooseX::Getopt: 0
   MooseX::Traits::Pluggable: 0
   MooseX::Types::LoadableClass: 0
-version: 0.002
+version: 0.003
