--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.004
+version = 0.005
 
 [@Basic]
 [Prereqs]
@@ -25,8 +25,9 @@ File::Temp = 0
 File::ShareDir::ProjectDistDir = 0
 MooseX::Attribute::ENV = 0
 Devel::PartialDump = 0
-DBD::Sqlite = 0
+DBD::SQLite = 0
 Pod::Usage = 0
+Config::Tiny = 0
 
 [Prereqs / TestRequires]
 Test::Most = 0
