Import of JJNAPIORK/DBIx-Class-Migration-0.008 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.008
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.008.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -35,5 +35,6 @@ requires:
   MooseX::Getopt: 0
   MooseX::Traits::Pluggable: 0
   MooseX::Types::LoadableClass: 0
+  Pod::Find: 0
   Pod::Usage: 0
-version: 0.007
+version: 0.008
