--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.007
+version = 0.008
 
 [@Basic]
 [Prereqs]
@@ -26,6 +26,7 @@ File::ShareDir::ProjectDistDir = 0
 MooseX::Attribute::ENV = 0
 Devel::PartialDump = 0
 DBD::SQLite = 0
+Pod::Find = 0
 Pod::Usage = 0
 Config::Tiny = 0
 
@@ -34,4 +35,3 @@ Test::Most = 0
 File::Spec::Functions = 0
 File::Path = 0
 Test::Requires = 0
-
