Import of JJNAPIORK/DBIx-Class-Migration-0.010 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.010
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.010.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.009
+version = 0.010
 
 [@Basic]
 [Prereqs]
@@ -28,7 +28,7 @@ Devel::PartialDump = 0
 DBD::SQLite = 0
 Pod::Find = 0
 Pod::Usage = 0
-Config::Tiny = 0
+Config::MySQL = 0
 
 [Prereqs / TestRequires]
 Test::Most = 0
