--- a/META.yml
+++ b/META.yml
@@ -18,7 +18,7 @@ meta-spec:
 name: DBIx-Class-Migration
 requires:
   Class::Load: 0
-  Config::Tiny: 0
+  Config::MySQL: 0
   DBD::SQLite: 0
   DBIx::Class::DeploymentHandler: 0.001008
   DBIx::Class::Fixtures: 1.001014
@@ -37,4 +37,4 @@ requires:
   MooseX::Types::LoadableClass: 0
   Pod::Find: 0
   Pod::Usage: 0
-version: 0.009
+version: 0.010
