Import of JJNAPIORK/DBIx-Class-Migration-0.012 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.012
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.012.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.011
+version = 0.012
 
 [@Basic]
 [Prereqs]
@@ -26,8 +26,7 @@ File::ShareDir::ProjectDistDir = 0.2.0
 MooseX::Attribute::ENV = 0
 Devel::PartialDump = 0
 DBD::SQLite = 0
-Pod::Find = 0
-Pod::Usage = 0
+Pod::Parser = 1.51
 Config::MySQL = 0
 
 [Prereqs / TestRequires]
