--- a/META.yml
+++ b/META.yml
@@ -35,6 +35,5 @@ requires:
   MooseX::Getopt: 0
   MooseX::Traits::Pluggable: 0
   MooseX::Types::LoadableClass: 0
-  Pod::Find: 0
-  Pod::Usage: 0
-version: 0.011
+  Pod::Parser: 1.51
+version: 0.012
