Import of JJNAPIORK/DBIx-Class-Migration-0.014 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.014
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.014.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300009, CPAN::Meta::Converter version 2.120530'
+generated_by: 'Dist::Zilla version 4.300009, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,7 +26,7 @@ requires:
   Devel::PartialDump: 0
   File::Copy: 0
   File::Path: 0
-  File::ShareDir::ProjectDistDir: 0.2.0
+  File::ShareDir::ProjectDistDir: v0.3.1
   File::Spec: 0
   File::Temp: 0
   JSON::XS: 0
@@ -36,4 +36,5 @@ requires:
   MooseX::Traits::Pluggable: 0
   MooseX::Types::LoadableClass: 0
   Pod::Parser: 1.51
-version: 0.013
+  version: 0.77
+version: 0.014
