--- a/META.yml
+++ b/META.yml
@@ -26,7 +26,7 @@ requires:
   Devel::PartialDump: 0
   File::Copy: 0
   File::Path: 0
-  File::ShareDir::ProjectDistDir: v0.3.1
+  File::ShareDir::ProjectDistDir: 0.003001
   File::Spec: 0
   File::Temp: 0
   JSON::XS: 0
@@ -37,4 +37,4 @@ requires:
   MooseX::Types::LoadableClass: 0
   Pod::Parser: 1.51
   version: 0.77
-version: 0.015
+version: 0.016
