Import of JJNAPIORK/DBIx-Class-Migration-0.017 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.017
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.017.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -36,5 +36,6 @@ requires:
   MooseX::Traits::Pluggable: 0
   MooseX::Types::LoadableClass: 0
   Pod::Parser: 1.51
+  SQL::Translator: 0.11010
   version: 0.77
-version: 0.016
+version: 0.017
