--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = John Napiorkowski
 copyright_year = 2012
 abstract = Make it easy to migrate DBIC based databases
 
-version = 0.016
+version = 0.017
 
 [@Basic]
 [Prereqs]
@@ -29,6 +29,7 @@ DBD::SQLite = 0
 Pod::Parser = 1.51
 Config::MySQL = 0
 version = 0.77
+SQL::Translator = 0.11010
 
 [Prereqs / TestRequires]
 Test::Most = 0
