--- a/dist.ini
+++ b/dist.ini
@@ -3,9 +3,8 @@ author  = John Napiorkowski <jjnapiork@cpan.org>
 license = Perl_5
 copyright_holder = John Napiorkowski
 copyright_year = 2012
-abstract = Make it easy to migrate DBIC based databases
-
-version = 0.017
+abstract = Tools to make migrating your DBIx::Class databases easier
+version = 0.018
 
 [@Basic]
 [Prereqs]
