Import of JJNAPIORK/DBIx-Class-Migration-0.023 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.023
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.023.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/examples/MusicBase/dist.ini
+++ b/examples/MusicBase/dist.ini
@@ -1,4 +1,4 @@
-name    = DBIx-Class-Migration
+name    = MusicBase
 author  = John Napiorkowski <jjnapiork@cpan.org>
 license = Perl_5
 copyright_holder = John Napiorkowski
