--- a/META.yml
+++ b/META.yml
@@ -32,10 +32,16 @@ requires:
   JSON::XS: 2.32
   Moose: 0
   MooseX::Attribute::ENV: 0.02
-  MooseX::Getopt: 0
+  MooseX::Getopt: 0.45
   MooseX::Traits::Pluggable: 0
+  MooseX::Types: 0
   MooseX::Types::LoadableClass: 0
   Pod::Parser: 1.51
   SQL::Translator: 0.11010
+  Text::Brew: 0
   version: 0.77
-version: 0.025
+resources:
+  bugtracker: https://github.com/jjn1056/DBIx-Class-Migration/issues
+  homepage: https://github.com/jjn1056/DBIx-Class-Migration
+  repository: https://github.com/jjn1056/DBIx-Class-Migration.git
+version: 0.026
