--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,11 @@ license = Perl_5
 copyright_holder = John Napiorkowski
 copyright_year = 2013
 abstract = Tools to make migrating your DBIx::Class databases easier
-version = 0.042
+version = 0.043
 
-[@Basic]
+[@ConfigSlicer]
+-bundle = @Basic
+GatherDir.include_dotfiles = 1
 
 [MetaResources]
 homepage = https://github.com/jjn1056/DBIx-Class-Migration
